--- a/buildroot-arc-2015.08-3/configs/snps_axs101_defconfig
+++ b/buildroot-arc-2015.08-3/configs/snps_axs101_defconfig
@@ -4,7 +4,6 @@ BR2_arcle=y
 # System
 BR2_TARGET_GENERIC_HOSTNAME="axs101"
 BR2_TARGET_GENERIC_ISSUE="Welcome to the ARC Software Development Platform"
-BR2_TARGET_ROOTFS_INITRAMFS=y
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_OVERLAY="board/synopsys/axs10x/fs-overlay"
 
@@ -18,6 +17,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/foss-for-synopsys-dwc-arc-processors/linux"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="arc-3.18-2"
+BR2_LINUX_KERNEL_PATCH="arc-ext4fs.patch"
 BR2_LINUX_KERNEL_DEFCONFIG="axs101"
 BR2_LINUX_KERNEL_TOOL_PERF=y
 
@@ -42,3 +42,14 @@ BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_RT_TESTS=y
 BR2_PACKAGE_IPERF3=y
+
+# Required tools to create the SD image
+BR2_PACKAGE_HOST_DOSFSTOOLS=y
+BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_MTOOLS=y
+
+# Filesystem / image
+BR2_TARGET_ROOTFS_EXT2=y
+BR2_TARGET_ROOTFS_EXT2_4=y
+# BR2_TARGET_ROOTFS_TAR is not set
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/synopsys/post-image.sh"
