--- a/buildroot-arc-2015.08-3/configs/snps_axs101_defconfig
+++ b/buildroot-arc-2015.08-3/configs/snps_axs101_defconfig
@@ -47,6 +47,8 @@ BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
 
 # Filesystem / image
 BR2_TARGET_ROOTFS_EXT2=y
