add axs103 support

--- a/buildroot-arc-2015.08-3/configs/snps_axs101_defconfig
+++ b/buildroot-arc-2015.08-3/configs/snps_axs101_defconfig
@@ -17,7 +17,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/foss-for-synopsys-dwc-arc-processors/linux"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="arc-3.18-2"
-BR2_LINUX_KERNEL_PATCH="arc-ext4fs.patch"
+BR2_LINUX_KERNEL_PATCH="arc-ext4fs-axs101.patch"
 BR2_LINUX_KERNEL_DEFCONFIG="axs101"
 BR2_LINUX_KERNEL_TOOL_PERF=y
 
